[gd_scene load_steps=14 format=3 uid="uid://tjb0t4lupr2u"]

[ext_resource type="Texture2D" uid="uid://bdlda5qybucsb" path="res://Art/fiya.png" id="1_1yrjb"]
[ext_resource type="Script" path="res://Scene/Player.gd" id="1_juv53"]
[ext_resource type="FontFile" uid="uid://bwxxkxeprx7fv" path="res://Font/monogram.ttf" id="3_latqr"]

[sub_resource type="Animation" id="Animation_50854"]
length = 0.1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [74]
}

[sub_resource type="Animation" id="Animation_m8joc"]
resource_name = "idle"
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_v65l8"]
resource_name = "walk_down"
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [130, 131, 132, 133, 134, 135]
}

[sub_resource type="Animation" id="Animation_fj3xa"]
resource_name = "walk_left"
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.96),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [124, 125, 126, 127, 128, 129]
}

[sub_resource type="Animation" id="Animation_2yc3q"]
resource_name = "walk_right"
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.96),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117]
}

[sub_resource type="Animation" id="Animation_2fgqb"]
resource_name = "walk_up"
loop_mode = 1
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [118, 119, 120, 121, 122, 123]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.96),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_1yrjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kcwss"]
_data = {
"RESET": SubResource("Animation_50854"),
"idle": SubResource("Animation_m8joc"),
"walk_down": SubResource("Animation_v65l8"),
"walk_left": SubResource("Animation_fj3xa"),
"walk_right": SubResource("Animation_2yc3q"),
"walk_up": SubResource("Animation_2fgqb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lhdvy"]
radius = 8.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f454p"]
radius = 18.0278

[sub_resource type="Theme" id="Theme_fxns6"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_juv53")
speed = 125.0

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(1, -4)
texture = ExtResource("1_1yrjb")
hframes = 56
vframes = 20
frame = 74

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kcwss")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 20)
shape = SubResource("CapsuleShape2D_lhdvy")

[node name="InteractionComponent" type="Node2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="InteractionComponent"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent/InteractionArea"]
position = Vector2(1, 8)
shape = SubResource("CircleShape2D_f454p")
debug_color = Color(1, 0, 0.509804, 0.392157)

[node name="Label" type="Label" parent="InteractionComponent"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -42.0
offset_right = 43.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_fxns6")
theme_override_fonts/font = ExtResource("3_latqr")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="area_entered" from="InteractionComponent/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponent/InteractionArea" to="." method="_on_interaction_area_area_exited"]
